[tool.poetry]
name = "nautobot-docker-compose"
version = "0.1.1"
description = ""
authors = ["John Doe <johndoe@mail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.2,<3.13"
nautobot = "2.4.10"

# nautobot-example-plugin = {path = "plugins/plugin_example", develop = true}
nautobot-dns-models = "^1.1.0"
nautobot-ssot = "^3.8.1"
oit-netops-nautobot-ssot-dns = {path = "plugins/oit_netops_nautobot_ssot_dns", develop = true}


[tool.poetry.dev-dependencies]
invoke = "*"
toml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
